test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/extra_credit/prefix_incr_void.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  extern
  void
  *
  identifier(x)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  ++
  (
  *
  identifier(x)
  )
  ;
  return
  const int(0)
  ;
  }
